<resources>
    <string name="app_name">Edvora_Task</string>
    <string name="image_url">Image_Url</string>
    <string name="city_name">City Name</string>
    <string name="state_name">State Name</string>
    <string name="ride_id_002">Ride Id : 002</string>
    <string name="origin_station_20">Origin Station : 20</string>
    <string name="station_path_20_39_40_42_54_63_72_88_98">station_path : [20, 39, 40, 42, 54, 63, 72, 88, 98]</string>
    <string name="date_15th_feb_2022_16_33">Date : 15th Feb 2022 16:33</string>
    <string name="distance_0">Distance : 0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>