<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#292929"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#171717">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvImage"
                android:layout_width="0dp"
                android:layout_height="148dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="27dp"
                app:cardCornerRadius="5dp"
                app:cardPreventCornerOverlap="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivRideImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_url"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="17dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvImage">

                <TextView
                    android:id="@+id/tvCityName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingTop="4dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="4dp"
                    android:text="@string/city_name"
                    android:textColor="@android:color/white" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvStateName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="27dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvImage">

                <TextView
                    android:id="@+id/tvStateName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:fontFamily="@font/inter"
                    android:background="@color/black"
                    android:gravity="center"
                    android:text="@string/state_name"
                    android:textColor="@android:color/white" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvRideId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="27dp"
                android:fontFamily="@font/inter"
                android:text="@string/ride_id_002"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:flow_verticalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvCityName" />

            <TextView
                android:id="@+id/tvOrigin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="27dp"
                android:fontFamily="@font/inter"
                android:text="@string/origin_station_20"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:flow_verticalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRideId" />

            <TextView
                android:id="@+id/tvStationPath"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="27dp"
                android:fontFamily="@font/inter"
                android:text="@string/station_path_20_39_40_42_54_63_72_88_98"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:flow_verticalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOrigin" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="27dp"
                android:fontFamily="@font/inter"
                android:text="@string/date_15th_feb_2022_16_33"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:flow_verticalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStationPath" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="27dp"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/inter"
                android:text="@string/distance_0"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:flow_verticalAlign="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDate" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>